--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,205 @@
 @import "tailwindcss";
 
+
+@font-face {
+  font-family: 'Futura';
+  src: url('/fonts/FuturaMd-BT.woff2') format('woff2'),
+       url('/fonts/FuturaMd-BT.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+} 
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --color-primary:#fab31e;
+  --color-black: #1d1d1d;
+  --color-white: #fdfdfd;
+  --color-grey: #898989;
+
+
+
+  --h1: 95px;
+  --h2: 45px;
+  --h3: 36px;
+  --h4: 30px;
+  --h5: 24px;
+  --h6: 16px;
+  --p: 18px;
+  --li:18px;
+}
+
+
+ @media (max-width: 1280px) { 
+    :root {
+        --h4: 20px;
+        
+    }
+  }
+/* Mobile font sizes */
+@media (max-width: 768px) {
+  :root {
+    --h1: 32px;
+    --h2: 24px;
+    --h3: 20px;
+    --h4: 18px;
+    --h5: 16px;
+    --h6: 14px;
+    --p: 14px;
+    --li:14px;
+  }
+  
+ 
+  /* hero heading font */
+
+ a{
+ font-family: var(--font-futura-bk-bt);
+  line-height: 1.1;
+}
+h1{
+  font-size: var(--h1);
+  font-family: var(--font-futura-bold);
+  line-height: 1.1;
+}
+
+/* heading font */
+h2{
+  font-size: var(--h2);
+  font-family: var(--font-futura-hv-bt);
+  line-height: 1.2;
+}
+
+
+/*footer heading font*/
+h3{
+  font-size: var(--h3);
+  font-family: var(--font-futura-hv-bt);
+  line-height: 1.3;
+}
+
+
+/* paragraph font */
+h4{
+  font-size: var(--h4);
+  font-family: var(--font-futura-md-bt);
+  line-height: 1.4;
+}
+
+/* footer text font */
+h5{
+  font-size: var(--h5);
+  font-family: var(--font-futura-bk-bt);
+  line-height: 1.5;
+}
+
+/* button font */
+h6{
+  font-size: var(--h6);
+  font-family: var(--font-futura-md-bt);
+  /* line-height: 1.5; */
+}
+
+/* paragraph font */
+p{
+  font-size: var(--p);
+  font-family: var(--font-futura-bk-bt);
+  line-height: 1.6;
+}
+
+
+}
+
+/* hero heading font */
+ a{
+ font-family: var(--font-futura-bk-bt);
+  line-height: 1.1;
+}
+h1{
+  font-size: var(--h1);
+  font-family: var(--font-futura-bold);
+  line-height: 1.1;
+}
+
+/* heading font */
+h2{
+  font-size: var(--h2);
+  font-family: var(--font-futura-hv-bt);
+  line-height: 1.2;
+}
+
+
+/*footer heading font*/
+h3{
+  font-size: var(--h3);
+  font-family: var(--font-futura-hv-bt);
+  line-height: 1.3;
+}
+
+
+/* paragraph font */
+h4{
+  font-size: var(--h4);
+  font-family: var(--font-futura-bk-bt);
+  line-height: 1.4;
+}
+
+/* footer text font */
+h5{
+  font-size: var(--h5);
+  font-family: var(--font-futura-bk-bt);
+  line-height: 1.5;
+}
+
+/* button font */
+h6{
+  font-size: var(--h6);
+  font-family: var(--font-futura-md-bt);
+  line-height: 1.5;
+  /* letter-spacing: 0.1rem; */
+}
+
+/* paragraph font */
+p{
+  font-size: var(--p);
+  font-family: var(--font-futura-bk-bt);
+  line-height: 1.6;
+}
+
+/* list font */
+li{
+  font-size: var(--li);
+  font-family: var(--font-futura-bk-bt);
+  line-height: 1.6;
+}
+
+
+::placeholder{
+  font-size: var(--body3-size);
+  font-family: var(--font-poppins);
+  font-weight: 400;
+  line-height: 1em;
+}
+/* =========================================
+   UTILITY TEXT COLORS
+   ========================================= */
+.text-primary {
+  color: var(--color-primary);
+}
+
+.black-text {
+  color: var(--color-black);
+}
+
+.white-text {
+  color: var(--color-white);
+}
+
+.grey-text {
+  color: var(--color-grey);
+}
+.border-radious{
+  border-radius: 20px;
 }
 
 @theme inline {
@@ -23,4 +220,97 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+
+.container,
+.container-fluid,
+.container-xxl,
+.container-xl,
+.container-lg,
+.container-md,
+.container-sm {
+    width: 100%;
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+    margin-right: auto !important;
+    margin-left: auto !important;
+}
+
+@media screen and (min-width: 0px) and (max-width: 750px) {
+
+    .container-sm,
+    .container {
+        width: 100%;
+        padding-right: 20px !important;
+        padding-left: 20px !important;
+        margin-right: auto !important;
+        margin-left: auto !important;
+    }
+
+}
+
+@media (min-width: 576px) {
+
+    .container-sm,
+    .container {
+        max-width: 540px;
+    }
+}
+
+@media (min-width: 768px) {
+
+    .container-md,
+    .container-sm,
+    .container {
+        max-width: 960px;
+
+    }
+}
+
+@media (min-width: 992px) {
+
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container {
+        max-width: 1000px;
+
+    }
+}
+
+@media (min-width: 1200px) {
+
+    .container-xl,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container {
+        max-width: 1200px;
+
+    }
+}
+
+@media (min-width: 1400px) {
+
+    .container-xxl,
+    .container-xl,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container {
+        max-width: 1400px;
+    }
+}
+
+@media (min-width: 1600px) {
+
+    .container-xxl,
+    .container-xl,
+    .container-lg,
+    .container-md,
+    .container-sm,
+    .container {
+        max-width: 1600px;
+    }
 }
