--- a/app/globals.css
+++ b/app/globals.css
@@ -2,18 +2,27 @@
 
 
 @font-face {
-  font-family: 'Futura';
-  src: url('/fonts/FuturaMd-BT.woff2') format('woff2'),
-       url('/fonts/FuturaMd-BT.woff') format('woff');
+  font-family: 'CRONOS-KID';
+  src: url('/fonts/CRONOS-KID.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
-} 
+}
 
+@font-face {
+  font-family: 'Poppins';
+  src: url('/fonts/Poppins-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+ 
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --color-primary:#fab31e;
+  --color-primary:#f6a81c;
+  --color-highlight:#2cbec3;
   --color-black: #1d1d1d;
   --color-white: #fdfdfd;
   --color-grey: #898989;
@@ -186,6 +195,9 @@ li{
 .text-primary {
   color: var(--color-primary);
 }
+.text-highlight {
+  color: var(--color-highlight);
+}
 
 .black-text {
   color: var(--color-black);
@@ -219,7 +231,7 @@ li{
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins', 'CRONOS-KID';
 }
 
 
@@ -313,4 +325,36 @@ body {
     .container {
         max-width: 1600px;
     }
+}
+
+
+/* 
+button */
+
+
+/* @import url("https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap"); */
+
+:root {
+  --hue: 223deg;
+  --gray1: hsl(var(--hue) 10% 95%);
+  --gray9: hsl(var(--hue) 10% 15%);
+  --black: hsl(0 0% 0%);
+  --primary3: hsl(var(--hue) 90% 75%);
+  --primary5: hsl(var(--hue) 90% 55%);
+  --primary6: hsl(var(--hue) 90% 45%);
+}
+
+@keyframes eye-blink {
+  0%,
+  92%,
+  100% {
+    height: 0.75em;
+  }
+  96% {
+    height: 0;
+  }
+}
+
+.eye {
+  animation: eye-blink 3s infinite;
 }
